--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calisthenics Tracker</title>
   <link rel="manifest" href="manifest.json">
+  <link rel="apple-touch-icon" href="icon-192.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="theme-color" content="#008080">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -68,11 +72,22 @@
         const key = `day${idx === 0 ? 1 : idx === 1 ? 2 : idx === 2 ? 4 : 5}`;
         workouts[key].forEach((ex, exIndex) => {
           const reps = 10 + Math.min(week - 1, 10);
+          const checkboxId = `w${week}-d${day}-ex${exIndex}`;
           const li = document.createElement('li');
           const checkbox = document.createElement('input');
           checkbox.type = 'checkbox';
           checkbox.className = 'checkbox';
-          checkbox.id = `w${week}-d${day}-ex${exIndex}`;
+          checkbox.id = checkboxId;
+
+          // Load saved state from localStorage
+          if (localStorage.getItem(checkboxId) === 'true') {
+            checkbox.checked = true;
+          }
+
+          // Save state to localStorage on change
+          checkbox.addEventListener('change', () => {
+            localStorage.setItem(checkboxId, checkbox.checked);
+          });
 
           const label = document.createElement('label');
           label.htmlFor = checkbox.id;
